Adicion de fonts.google

--- a/JamesWebPage/beginning.html
+++ b/JamesWebPage/beginning.html
@@ -5,59 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first web page to my dear James</title>
-    <style>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet"> 
 
-        body{
-            background-color: #fff;
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-        }
-
-        main{
-            color: black;
-
-        }
-
-        header, footer{
-            padding: 8px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color:rgb(15, 7, 90);
-            background-color: rgb(25, 112, 226);
-            text-align: center;
-            
-        }
-
-        nav ul{
-            list-style: none;
-			margin: 0;
-			padding: 0;
-			text-align: center;
-
-        } 
-        
-        nav li{
-			display: inline-block;
-			padding: 8px;
-        }
-        nav a{
-            text-decoration: none;
-            color: rgb(15, 7, 90);
-        }
-
-        nav li:hover{
-            background-color: #7e4cdb;
-        }
-        p{
-            padding: 16px;
-        }
-
-        img{
-            padding: 16px;
-        }
-
-
-    </style>
+ 
 
 </head>
 <body >
@@ -103,16 +57,16 @@
         Yours forever, Enrique</p></i>
 
         <div class="gallery">
-            <img style="width: 265px;" src="james.jpeg" alt="James!"/>
+            <img style="width: 265px;" src="img/james.jpeg" alt="James!"/>
 
-            <img style="width: 300px;" src="henry.jpeg" alt="Henry!"/>
+            <img style="width: 300px;" src="img/henry.jpeg" alt="Henry!"/>
         </div>
 
     </main>
 
     <footer>
         <p>
-            &copy; All right reserved. 2021
+            &copy; All rights reserved. 2021 | <a href="mailto:contact@eguzman.net"><strong>Contact me!</strong></a> 
         </p>
 
     </footer>
